# aseflow

./: .gitignore  README.md  pyproject.toml
aseneb/: .interpolate.py.swp  analysis_cli.py  analysis_utils.py  barplot_cli.py  cli.py  config.py  config_io.py  dft_runner.py  getenergies.py  interpolate.py  interpolate_backup.py  mace_runner.py  plot_cli.py  workflow.py
aseneb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
aseneb/analysis_examples/: postprocess_example.ipynb  postprocess_example.py
aseneb/analysis_scripts/: analysis_cli.py  analysis_utils.py  make_figure_comparison.py
aseneb/helper_scripts/: analyze4.py  cont2jdft.py  getenergies.py
